# etheria

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark_mnist.py  handwritten_tkinter.py  justfile  main.cpp  pyproject.toml  python_test_d.py  python_test_pack.py  setup.py  test_eth.py  test_handwritten.py  test_matrix.py  thx2.md
bindings/: CMakeLists.txt  bindings.cpp
cpptests/: CMakeLists.txt  fit.cpp
docs/: initialization.md  notes.md
etheria/: __init__.py
etheria/_eth/: __init__.py  tensor.pyi
etheria/_etheria/: __init__.py  activation.pyi  cuda.pyi  tensor.pyi
etheria/activation/: __init__.py  activation.py  initialization.py
etheria/core/: __init__.py  __init__.pyi
etheria/cuda/: __init__.py  helpers.py
etheria/dtypes/: __init__.py  dtype.py
etheria/models/: __init__.py  base.py  layers.py  model.py  sequential.py  types.py
etheria/tensor/: __init__.py  ops.py  tensor.py
etheria/utils/: __init__.py  conversions.py
include/: activation_functions.hpp  connection.hpp  layer.hpp  neural_network.hpp  neuron.hpp  types.hpp  utils.hpp
include/activation/: activation.hpp
include/alg/: ops.hpp
include/algebra/: ops.hpp  ops_cpu.hpp  ops_cuda.hpp  types.hpp
include/cuda/: cuda_helper.cuh  gpu_model.cuh
include/initialization/: initialization.hpp
include/mlp/: cpu_model.hpp  layer.hpp  neural_network.hpp
include/tensor/: tensor.hpp
src/: CMakeLists.txt  connection.cpp  layer.cpp  neural_network.cpp  neuron.cpp
src/activation/: activation.cpp  activation.hpp
src/alg/: ops.cpp
src/algebra/: CMakeLists.txt  ops.cpp  ops_cpu.cpp  ops_cuda.cu
src/bindings/: activation_bindings.hpp  bindings.cpp  cuda_bindings.hpp  tensor_bindings.hpp
src/cuda/: cuda_activation.cu  cuda_helper.cu  cuda_helper.cuh  gpu_model.cu
src/dtype/: dtype.hpp
src/initialization/: initialization.cpp
src/mlp/: cpu_model.cpp  neural_network.cpp
src/neural_network/: CMakeLists.txt  neural_network.cpp
src/tensor/: itensor.cpp  itensor.hpp  ops.cpp  ops.hpp  tensor.cpp  tensor.hpp
tests/: actf_tests.cpp  layer_tests.cpp  neuron_tests.cpp  testna.py
