[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etheria"
version = "0.0.1-alpha"
description = "Etheria MLP library for Edge AI applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]
authors = [
    {name = "Juan Sobalvarro", email = "sobalvarrog.juans@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License"
]

[dependency-groups]
dev = [
    "etheria",
]

[tool.uv.sources]
etheria = { workspace = true }
